@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-05T12:39:44Z",
+  "timestamp" : "2024-08-08T01:34:39Z",
   "count_outdated" : 8218,
   "uniques_outdated" : 3659,
-  "count" : 8221,
-  "uniques" : 3662,
+  "count" : 8223,
+  "uniques" : 3664,
   "clones" : [
     {
       "timestamp": "2024-07-29T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
